--- a/Docs/latex/md_README.tex
+++ b/Docs/latex/md_README.tex
@@ -1,1 +1,1 @@
-A C interface to the Udoo Neo, implements G\-P\-I\-O, P\-W\-M, F\-A\-K\-E-\/\-P\-W\-M, A\-C\-C\-E\-L, G\-Y\-R\-O and M\-A\-G\-N\-O 
+A C interface to the Udoo Neo, implements G\+P\+IO, P\+WM, F\+A\+K\+E-\/\+P\+WM, A\+C\+C\+EL, G\+Y\+RO and M\+A\+G\+NO 
